# OpenList-Desktop-fork

./: .gitignore  .pre-commit-config.yaml  README.md  README_en.md  eslint.config.js  eslint.config.mjs  index.html  package.json  release_notes.md  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml  question.yml
.github/scripts/: Sign-Tauri-Windows.ps1
.github/workflows/: auto-version.yml  build-test.yml  ci.yml  i18n-check.yml  lint-test.yml  release.yml
.winget/: metadata.yml
scripts/: find-unused-i18n.js  prepare.js  utils.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/cmd/: admin_pass.rs  binary.rs  config.rs  custom_updater.rs  firewall.rs  http_api.rs  logs.rs  macos_dock.rs  mod.rs  openlist_core.rs  os_operate.rs  rclone_core.rs  rclone_mount.rs  service.rs  updater.rs
src-tauri/src/conf/: app.rs  config.rs  core.rs  mod.rs  rclone.rs  rclone_config.rs
src-tauri/src/core/: process_manager.rs  service.rs
src-tauri/src/object/: methods.rs  structs.rs
src-tauri/src/utils/: api.rs  args.rs  github_proxy.rs  init_log.rs  mod.rs  path.rs
src/api/: tauri.ts
src/assets/css/: index.css
src/assets/svg/: BaseSvg.vue
src/components/: Navigation.vue  NavigationPage.vue
src/components/common/: CustomButton.vue  CustomInput.vue  CustomModal.vue  CustomNavCard.vue  CustomSwitch.vue  SettingCard.vue  SettingSection.vue  SingleSelect.vue
src/components/dashboard/: CoreMonitorCard.vue  DocumentationCard.vue  QuickActionsCard.vue  ServiceManagementCard.vue  UpdateManagerCard.vue  VersionManagerCard.vue
src/components/ui/: Card.vue  CardPage.vue  ConfirmDialog.vue  ConfirmMessageBox.vue  LanguageSwitcher.vue  MessageToast.vue  StatusIndicator.vue  ThemeSwitcher.vue  TitleBar.vue  TutorialOverlay.vue  UIServiceProvider.vue  UpdateNotification.vue  WindowControls.vue
src/composables/: useCoreActions.ts  useI18n.ts  useKeyboardShortcuts.ts  useLogs.ts  useMenu.ts  useResizable.ts  useServiceActions.ts  useTray.ts
src/hooks/: useConfirm.ts  useMessage.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/router/: index.ts
src/stores/: app.ts  rclone.ts
src/types/: index.ts  types.d.ts
src/utils/: common.ts  constant.ts  formatters.ts  getSys.ts
src/views/: HomeView.vue  LogView.vue  MountView.vue  SettingsView.vue  UpdateView.vue
src/views/css/: HomeView.css  LogView.css  MountView.css  SettingsView.css
