[package]
name = "openlist-desktop"
version = "0.2.0"
description = "A Tauri App"
authors = ["Kuingsmile"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openlist_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-autostart = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
log4rs = "1.3.0"
dirs = "6.0.0"
open = "5.3.2"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls", "cookies"] }
once_cell = "1.21.3"
parking_lot = "0.12.4"
url = "2.5.4"
lazy_static = "1.5.0"
base64 = "0.22.1"
zip = "4.2.0"
tar = "0.4.44"
flate2 = "1.1.2"
regex = "1.11.1"

[target.'cfg(windows)'.dependencies]
runas = "=1.2.0"
deelevate = "0.2.0"
windows-service = "0.8.0"

[target.'cfg(target_os = "linux")'.dependencies]
uzers = "0.12.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
