[package]
name = "openlist-desktop"
version = "0.9.0"
description = "OpenList Desktop Application"
authors = ["Kuingsmile"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openlist_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.101"
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }
log = "0.4.29"
log4rs = "1.4.0"
dirs = "6.0.0"
open = "5.3.3"
reqwest = { version = "0.13.1", features = ["json", "rustls", "cookies"] }
once_cell = "1.21.3"
parking_lot = "0.12.5"
url = "2.5.8"
lazy_static = "1.5.0"
base64 = "0.22.1"
zip = "7.4.0"
tar = "0.4.44"
flate2 = "1.1.9"
regex = "1.12.3"
dunce = "1.0.5"
rand = "0.9.2"
sysinfo = "0.38.1"

[target.'cfg(windows)'.dependencies]
runas = "=1.2.0"
deelevate = "0.2.0"
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading", "Win32_Foundation"] }


[target.'cfg(target_os = "linux")'.dependencies]
uzers = "0.12.2"
libc = "0.2.181"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.180"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
